--- a/JSCodeLog/Boiler Plate/index.html
+++ b/JSCodeLog/Boiler Plate/index.html
@@ -6,7 +6,7 @@
         <title>Day X of 100 days of code challenge</title>
         <style>
             h1{
-                color: deepskyblue;
+                color: #DD3333;
             }
         </style>
         <script src="code.js"></script>
