--- a/JSCodeLog/Day 2/index.html
+++ b/JSCodeLog/Day 2/index.html
@@ -6,7 +6,7 @@
         <title>Day 2 of 100 days of code challenge: Rock Paper Scissors</title>
         <style>
             h1{
-                color: deepskyblue;
+                color: #DD3333;;
             }
         </style>
     </head>
