Finalized my daily log

--- a/JSCodeLog/Day 3/index.html
+++ b/JSCodeLog/Day 3/index.html
@@ -5,7 +5,7 @@
         <meta charset="utf-8">
         <title>Day 3 of 100 days of code challenge: Memory Game</title>
         <link rel="stylesheet" type="text/css" href="style.css"/>
-        
+
     </head>
     <body>
         <h1>Day 3 of 100 Days of Code</h1>
@@ -79,7 +79,7 @@
                         const resultDisplay = document.querySelector('#result')
                         //empty array to push items into the array
                         let cardsChosen = []
-                        let cardsChosenIds = [] 
+                        let cardsChosenIds = []
                         const cardsWon = []
 
                         function createBoard() {
@@ -113,7 +113,7 @@
                                 //if not a match then flip them back
                                 cards[optionOneId].setAttribute('src', 'images/blank.png')
                                 cards[optionTwoId].setAttribute('src', 'images/blank.png')
-                                alert('Sorry try again :-(')    
+                                alert('Sorry try again :-(')
                             }
 
                             resultDisplay.textContent = cardsWon.length
@@ -163,6 +163,20 @@
                         }
           </code>
          </pre>
+         <p><h3>Day 3: May 12, 2022</h3></p>
+
+         <p><h3>**Today's Progress**</h3></p>
+         <p>I worked on a matching game tutorial and added a little animation in CSS when the player finishes the game after having guessed all the given matches. I intended to do a fireworks animation but it did not work out the way I intended.</p>
+
+         <p>**Link to this tutorial:** [Tutorial](https://www.youtube.com/watch?v=ec8vSKJuZTk)<p>
+
+         <p>**Thoughts:**</p>
+         <p>I had a very busy day at work and I almost had no time to get this done, but I know if I give myself an out this early in the game, it is likely I will not make it through. I know first hand that developing a habit takes a lot of repetition and more importantly unwavering commitment.</p>
+
+         <p>I Twitted today my progress with a screenshot of the work and pushed my changes to GitHub.</p>
+
+         <p>**Perm Link to work:** [Matching Game](https://github.com/MOZPIT/100-days-of-code/tree/Day_3)</p>
+         <p>**Live Link to work:** [Current Day](https://mozpit.github.io/100-days-of-code/)</p>
         <script src="app.js"></script>
     </body>
 </html>
