--- a/index.html
+++ b/index.html
@@ -3,180 +3,40 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>Day 3 of 100 days of code challenge: Memory Game</title>
-        <link rel="stylesheet" type="text/css" href="style.css"/>
-
+        <title>Day 4 of 100 days of code challenge</title>
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <h1>Day 3 of 100 Days of Code</h1>
+        <h1>Day 4 of 100 Days of Code</h1>
         <br/>
-        <p><strong><h1>Memory Game</h1></strong><br/></p>
-        <div id="fireworksDisplay">
-                <h3>Score: <span id="result"></span></h3>
+        <p><strong>Description:</strong> WHAC-A-MOLE <br/></p>
+        <h2>Your score:</h2>
+        <h2 id="score">0</h2>
+
+        <h2>Time Left:</h2>
+        <h2 id="time-left">60</h2>
+
+
+        <div class="grid">
+            <div class="square" id="1"></div>
+            <div class="square" id="2"></div>
+            <div class="square" id="3"></div>
+            <div class="square" id="4"></div>
+            <div class="square mole" id="5"></div>
+            <div class="square" id="6"></div>
+            <div class="square" id="7"></div>
+            <div class="square" id="8"></div>
+            <div class="square" id="8"></div>
         </div>
-        <div id="grid"></div>
-        <div id="fireworksDisplay2"></div>
+<!--
         <p><strong>JS Code:</strong></p>
          <pre>
             <code>
                /*jslint devel: true */
 
-                        const cardArray = [
-                            {
-                                name: 'fries',
-                                img:  'images/fries.png',
-                            },
-                            {
-                                name: 'cheeseburger',
-                                img: 'images/cheeseburger.png',
-                            },
-                            {
-                                name: 'hotdog',
-                                img: 'images/hotdog.png',
-                            },
-                            {
-                                name: 'ice-cream',
-                                img: 'images/ice-cream.png',
-                            },
-                            {
-                                name: 'milkshake',
-                                img: 'images/milkshake.png',
-                            },
-                            {
-                                name: 'pizza',
-                                img: 'images/pizza.png',
-                            },
-                            {
-                                name: 'fries',
-                                img:  'images/fries.png',
-                            },
-                            {
-                                name: 'cheeseburger',
-                                img: 'images/cheeseburger.png',
-                            },
-                            {
-                                name: 'hotdog',
-                                img: 'images/hotdog.png',
-                            },
-                            {
-                                name: 'ice-cream',
-                                img: 'images/ice-cream.png',
-                            },
-                            {
-                                name: 'milkshake',
-                                img: 'images/milkshake.png',
-                            },
-                            {
-                                name: 'pizza',
-                                img: 'images/pizza.png',
-                            }
-                        ]
-
-                        //This is a trick to sort the array randomly
-                        cardArray.sort(() => 0.5 - Math.random())
-
-                        const gridDisplay = document.querySelector('#grid')
-                        const resultDisplay = document.querySelector('#result')
-                        //empty array to push items into the array
-                        let cardsChosen = []
-                        let cardsChosenIds = []
-                        const cardsWon = []
-
-                        function createBoard() {
-                            for(let i = 0; i < cardArray.length; i++){
-                                const card = document.createElement('img')
-                                card.setAttribute('src', 'images/blank.png')
-                                card.setAttribute('data-id', i)
-                                card.addEventListener('click', flipCard)
-                                gridDisplay.appendChild(card)
-                            }
-                        }
-
-                        createBoard()
-
-                        function checkMatch(){
-                            const cards = document.querySelectorAll('img')
-                            const optionOneId = cardsChosenIds[0]
-                            const optionTwoId = cardsChosenIds[1]
-
-                            if(optionOneId == optionTwoId){
-                                cards[optionOneId].setAttribute('src', 'images/blank.png')
-                                cards[optionTwoId].setAttribute('src', 'images/blank.png')
-                                alert('You have clicked the same image!')
-                            }else if(cardsChosen[0] === cardsChosen[1]){
-                                cards[optionOneId].setAttribute('src', 'images/white.png')
-                                cards[optionTwoId].setAttribute('src', 'images/white.png')
-                                cards[optionOneId].removeEventListener('click', flipCard)
-                                cards[optionTwoId].removeEventListener('click', flipCard)
-                                cardsWon.push(cardsChosen)
-                            }else{
-                                //if not a match then flip them back
-                                cards[optionOneId].setAttribute('src', 'images/blank.png')
-                                cards[optionTwoId].setAttribute('src', 'images/blank.png')
-                                alert('Sorry try again :-(')
-                            }
-
-                            resultDisplay.textContent = cardsWon.length
-                            cardsChosen = []
-                            cardsChosenIds = []
-
-                            //if all the pairs are chosen without err
-                            if(cardsWon.length === (cardArray.length/2)){
-                                const fireworksDisplay = document.querySelector('#fireworksDisplay')
-                                const fireworksDisplay2 = document.querySelector('#fireworksDisplay2')
-                                var fireworks1 = document.createElement('div')
-                                var one = document.createElement('div')
-                                var fireworks2 = document.createElement('div')
-                                var two = document.createElement('div')
-                                var fireworks3 = document.createElement('div')
-                                var fireworks4 = document.createElement('div')
-
-                                fireworks1.setAttribute('class', 'fireworks')
-                                fireworks2.setAttribute('class', 'fireworks-2')
-                                fireworks3.setAttribute('class', 'fireworks-3')
-                                fireworks4.setAttribute('class', 'fireworks-4')
-
-                                one.setAttribute('class', 'one')
-                                two.setAttribute('class', 'two')
-
-                                fireworksDisplay.appendChild(fireworks1)
-                                fireworksDisplay.appendChild(one)
-                                resultDisplay.appendChild(fireworks2)
-                                resultDisplay.appendChild(two)
-                                fireworksDisplay2.appendChild(fireworks3)
-                                fireworksDisplay2.appendChild(two)
-
-                                resultDisplay.textContent = 'Congrats you found them all!!'
-                            }
-                        }
-
-                        function flipCard(){
-                            const cardId = this.getAttribute('data-id')
-                            cardsChosen.push(cardArray[cardId].name)
-                            cardsChosenIds.push(cardId)
-                            this.setAttribute('src', cardArray[cardId].img)
-                            if(cardsChosen.length === 2){
-                                //timing event to call a function after certain amount of time has passed
-                                setTimeout(checkMatch, 500)
-
-                            }
-                        }
           </code>
          </pre>
-         <p><h3>Day 3: May 12, 2022</h3></p>
-
-         <p><h3>**Today's Progress**</h3></p>
-         <p>I worked on a matching game tutorial and added a little animation in CSS when the player finishes the game after having guessed all the given matches. I intended to do a fireworks animation but it did not work out the way I intended.</p>
-
-         <p>**Link to this tutorial:** [Tutorial](https://www.youtube.com/watch?v=ec8vSKJuZTk)<p>
-
-         <p>**Thoughts:**</p>
-         <p>I had a very busy day at work and I almost had no time to get this done, but I know if I give myself an out this early in the game, it is likely I will not make it through. I know first hand that developing a habit takes a lot of repetition and more importantly unwavering commitment.</p>
-
-         <p>I Twitted today my progress with a screenshot of the work and pushed my changes to GitHub.</p>
-
-         <p>**Perm Link to work:** [Matching Game](https://github.com/MOZPIT/100-days-of-code/tree/Day_3)</p>
-         <p>**Live Link to work:** [Current Day](https://mozpit.github.io/100-days-of-code/)</p>
-        <script src="app.js"></script>
+-->
+        <script src="code.js"></script>
     </body>
 </html>
