--- a/JSCodeLog/Day 4/index.html
+++ b/JSCodeLog/Day 4/index.html
@@ -28,15 +28,65 @@
             <div class="square" id="8"></div>
             <div class="square" id="8"></div>
         </div>
-<!--
+
         <p><strong>JS Code:</strong></p>
          <pre>
             <code>
                /*jslint devel: true */
 
+               const squares = document.querySelectorAll('.square')
+               const mole = document.querySelector('.mole')
+               const timeLeft = document.querySelector('#time-left')
+               const score = document.querySelector('#score')
+
+               //global variables
+               let result = 0
+               let hitPosition
+               let currentTime = 30
+               let timerId = setInterval(randomSquare, 1000)
+
+               function randomSquare(){
+                   squares.forEach(square => {
+                       square.classList.remove('mole')
+                   })
+
+                   let randomSquare = squares[Math.floor(Math.random() * 9)]
+                   randomSquare.classList.add('mole')
+
+                   hitPosition = randomSquare.id
+               }
+
+               squares.forEach(square => {
+                   square.addEventListener('mousedown', () => {
+                       if(square.id == hitPosition){
+                           result++
+                           score.textContent = result
+                           hitPosition = null
+                       }
+                   })
+               })
+
+               function moveMole(){
+                   let timerId = null
+               }
+
+               moveMole()
+
+               function countDown(){
+                   currentTime--
+                   timeLeft.textContent = currentTime
+
+                   if(currentTime == 0){
+                       clearInterval(countDownTimerId)
+                       clearInterval(timerId)
+                       alert('GAME OVER! Your final score is ' + result)
+                   }
+               }
+
+               let countDownTimerId = setInterval(countDown, 750)
           </code>
          </pre>
--->
+
         <script src="code.js"></script>
     </body>
 </html>
